@@ -86,53 +86,3 @@ class MuninTests(unittest.TestCase):
             unregister_reporter(jsfr)
 
 
-    def test_munin_zero_values(self):
-        cfg = self.make_basic_cfg()
-        cfg[0]["global"]["pyc_ignore_zero_value"]=True
-        plugin = self.create_plugin(cfg)
-
-        jsfr = JSONFileReporter(output_file=self.filename)
-
-        register_reporter(jsfr)
-        test1 = EventCounter("test1")
-        register_counter(test1)
-
-        try:
-            test1.report_event("test1", "value", 0)
-
-            GLOBAL_REPORTING_CONTROLLER.report()
-
-            plugin.output_data(cfg)
-            self.assertEqual(self.get_last_plugin_output(), ["multigraph test" ])
-
-
-            os.unlink(self.filename)
-        finally:
-            unregister_counter(counter=test1)
-            unregister_reporter(jsfr)
-
-
-    def test_munin_zero_values_disabled(self):
-        cfg = self.make_basic_cfg()
-        cfg[0]["global"]["pyc_ignore_zero_value"]=False
-        plugin = self.create_plugin(cfg)
-
-        jsfr = JSONFileReporter(output_file=self.filename)
-
-        register_reporter(jsfr)
-        test1 = EventCounter("test1")
-        register_counter(test1)
-
-        try:
-            test1.report_event("test1", "value", 0)
-
-            GLOBAL_REPORTING_CONTROLLER.report()
-
-            plugin.output_data(cfg)
-            self.assertEqual(self.get_last_plugin_output(), ["multigraph test", "test1.value 0" ])
-
-
-            os.unlink(self.filename)
-        finally:
-            unregister_counter(counter=test1)
-            unregister_reporter(jsfr)
